<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back2"
    tools:context=".LoginActivity">

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_navicon"
                    android:layout_width="45sp"
                    android:layout_height="45sp"
                    android:layout_marginStart="20sp"
                    android:background="@drawable/ripple"
                    android:src="@drawable/ic_baseline_view_headline_24" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="15dp"
                    android:paddingBottom="10dp"
                    android:text="@string/punch_clock"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="38sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <com.association.punchclock.Views.WeatherView
                    android:id="@+id/weather_view"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    tools:ignore="NestedWeights" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="20dp"
                    android:background="@color/gray_btn_bg_color" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingTop="20dp">

                    <com.association.punchclock.Views.CodeInput
                        android:id="@+id/verify_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <com.association.punchclock.Views.KeyboardView
                        android:id="@+id/mKeyboard"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <com.association.punchclock.Views.AutoFitTextureView
                    android:id="@+id/autoFitTextureView"
                    android:layout_width="0dp"
                    android:layout_height="0dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:padding="10dp"
                android:text="@string/copylight"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@color/black"
            android:fitsSystemWindows="true"
            android:padding="20sp">

            <LinearLayout
                android:id="@+id/lay_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple"
                android:padding="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/log_out"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>
        </com.google.android.material.navigation.NavigationView>
    </androidx.drawerlayout.widget.DrawerLayout>

</FrameLayout>